force-app/main/default/objects/smartystreets__Zip_Info__mdt/smartystreets__Zip_Info__mdt.object-meta.xml
<CustomObject>
    <description>Lookup Info for Zip Codes</description>
    <label>√ Zip Info</label>
    <pluralLabel>√ Zip Info</pluralLabel>
</CustomObject>