force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__AreaCodes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__AreaCodes__c</fullName>
    <label>Area Codes</label>
    <length>31</length>
    <type>Text</type>
</CustomField>