force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__City__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__City__c</fullName>
    <label>City</label>
    <length>27</length>
    <type>Text</type>
</CustomField>