force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__CityType__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CityType__c</fullName>
    <label>City Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>