force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__County__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__County__c</fullName>
    <label>County</label>
    <length>25</length>
    <type>Text</type>
</CustomField>