force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__CountyFIPs__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__CountyFIPs__c</fullName>
    <label>County FIPs</label>
    <length>3</length>
    <type>Text</type>
</CustomField>