force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__Elevation__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Elevation__c</fullName>
    <label>Elevation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>