force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__State__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>