force-app/main/default/objects/smartystreets__Zip_Info__mdt/fields/smartystreets__UA__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__UA__c</fullName>
    <label>UA</label>
    <length>5</length>
    <type>Text</type>
</CustomField>