force-app/main/default/objects/smartystreets__Zip_Info__mdt/listViews/smartystreets__AllZipCodes.listView-meta.xml
<ListView>
    <fullName>smartystreets__AllZipCodes</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>smartystreets__City__c</columns>
    <columns>smartystreets__State__c</columns>
    <columns>smartystreets__County__c</columns>
    <columns>smartystreets__UA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Zip Codes</label>
    <language>en_US</language>
</ListView>